# wb-analytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEV_GUIDE.md  Makefile  README.md
.github/workflows/: lint.yml  tests.yml
backend/: pyproject.toml  ruff.toml
backend/docs/: v1.yaml
backend/src/apps/products/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/apps/products/management/commands/: parse_wb_products.py
backend/src/apps/products/migrations/: 0001_initial.py
backend/src/apps/products/templates/admin/: parse_wb_form.html  products_changelist.html
backend/src/apps/products/tests/: factories.py  test_services.py  test_views.py
backend/src/config/: asgi.py  wsgi.py  yasg.py
backend/src/config/settings/: __init__.py  auth.py  base.py  database.py  docs.py  logging.py  rest_framework.py  security.py
backend/src/config/urls/: __init__.py  base.py  v1.py
deployments/dev/: docker-compose.yaml
deployments/dev/conf/: .env  nginx.conf
deployments/dev/entrypoints/: backend.sh  frontend.sh
deployments/dev/images/: backend.Dockerfile  frontend.Dockerfile  nginx.Dockerfile
deployments/prod/: docker-compose.yaml
deployments/prod/conf/: .env  nginx.conf
deployments/prod/entrypoints/: backend.sh
deployments/prod/images/: backend.Dockerfile  (+1 more)
frontend/: .prettierrc.json  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ProductCharts.tsx  ProductFilters.tsx  ProductTable.tsx
frontend/lib/: api.ts
frontend/types/: product.ts
(+2 files in other folders)
